@@ -52,6 +52,8 @@ documents those changes that are of interest to users and administrators.
     provided by client.
  -- openapi/dbv0.0.38 - accept job state filter as verbose names instead of
     only numeric state ids.
+ -- Fix regression in 22.05.0rc1: if slurmd shuts down while a prolog is
+    running, the job is cancelled and the node is drained.
 
 * Changes in Slurm 22.05.2
 ==========================
